<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/pickup_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_date"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pickup_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_date"
        android:layout_marginTop="8dp" />
    <Spinner
        android:id="@+id/brand_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/brand_array"
        android:prompt="@string/brand_prompt" />

    <TextView
        android:id="@+id/car_model_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_model"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/car_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/duration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/duration_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/extra_1_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Insurance"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/extra_2_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GPS"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_now"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/edit_booking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_booking"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/navigate_to_user_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_user"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>
